Coupon class +com sample

--- a/ArsaRExCH/Components/Layout/MainLayout.razor
+++ b/ArsaRExCH/Components/Layout/MainLayout.razor
@@ -120,9 +120,10 @@
                 <div class="sub-tabs">
                     <a href="BetHistory">Bet History</a>
                     <a href="BitcoinPoolOneUsers">Pools</a>
+                    <a href="ProTradeProfile">Prep Trades History</a>
                     <a href="Forum">Forum</a>
                     <a href="AirDrop">AirDrop</a>
-
+                    
                 </div>
             </div>
 
