--- a/ArsaRExCH/Components/Pages/AdminPanel.razor
+++ b/ArsaRExCH/Components/Pages/AdminPanel.razor
@@ -69,7 +69,7 @@ else
     {
         "BannedCountry", "UserInformation", "Add Pair", "BetListAdmin", "RoleManagerAdmin",
         "AirDropFaq", "AdminPost", "PoolAdmin", "BitcoinPoolOneUsers", "/SetupExchangeWallet",
-        "/page11", "/page12", "/page13", "/page14", "/page15"
+        "/Coupon", "/page12", "/page13", "/page14", "/page15"
     };
 
     protected override async Task OnInitializedAsync()
